# mssql-with-vss

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: exp5-tpm-bitlocker.md  ghcr-secret.example.yaml  golden-image-build.md  lab-guide.md  requirements.md  unattend.xml  win2k25-golden-autounattend.xml  win2k25-golden-dataimportcron.yaml  win2k25-golden-post-install.ps1  win2k25-vm-prep.md  windows-vm-prep.md
manifests/: backup-nohook.yaml  backup.yaml  backupplan-nohook.yaml  backupplan.yaml  exp5-access-services.yaml  exp5-backup.yaml  exp5-backupplan.yaml  exp5-restore.yaml  exp5-vm.yaml  exp5-win2k25-dataimportcron.yaml  golden-containerdisk-push.yaml  hook-mssql-anchor.yaml  restore-access-services.yaml  restore-exp4-access-services.yaml  restore-exp4.yaml  restore-exp6.yaml  restore.yaml
manifests/hooks/: prehook-anchor.sh
output/: hook-poc-20260704.md  hook-poc-backup-runs-20260704.txt  hook-poc-backup6-posthook-frozen-trace-excerpt.txt  hook-poc-backup7-hook-logs.txt  hook-poc-backup7-rlkmn-hookstatus.json  hook-poc-vss-events-backups3-7-20260704.txt  trilio-mssql-app-consistency-approach.md
repro/hook-sequencing/: 01-vm.yaml  02-hook.yaml  03-backupplan.yaml  04-backup.yaml  README.md
src/: pdf_inspect.py
